-Updated CustomerReviewServiceImpl to use ResponseEntity<Response> and handle exceptions -Refactored exception handling to use specific exception classes. -Enhanced updateRestaurantRatings method to round rating averages to one decimal place for consistency.